chore: reduce logging level of successful validations